# mcpservers

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
src/gemini_mcp/: __init__.py  server.py  server_cli.py
