[project]
name = "mcpservers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.10.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pillow>=11.2.1",
]


[tool.pyright]



typeCheckingMode = "strict"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Linux"
